--- a/shared/mlr_feature_selection_1.Rmd
+++ b/shared/mlr_feature_selection_1.Rmd
@@ -14,9 +14,6 @@ require(pROC)
 require(mlr)
 ```
 
-```{r}
-install.packages("mlr")
-```
 
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
@@ -34,14 +31,14 @@ h2o.init(nthreads=-1, max_mem_size = "7G")
 
 # LOAD DATASET
 ```{r}
-load(file = "~/shared/ds_icu_pm_1")
+load(file = "~/shared/ds_icu_pm_2")
 ```
 
 
 #small dataset to begin tests
 ```{r}
-small_sample<-createDataPartition(y=ds_icu_pm_1$icu_dead_before_28,p=.20,list = FALSE)
-ds_small_sample<-ds_icu_pm_1[small_sample,]
+small_sample<-createDataPartition(y=ds_icu_pm_2$icu_dead_before_28,p=.20,list = FALSE)
+ds_small_sample<-ds_icu_pm_2[small_sample,]
 ```
 
 #training and test datasets
@@ -51,9 +48,9 @@ ds_small_train<-ds_small_sample[small_train,]
 ds_small_test<-ds_small_sample[-small_train,]
 
 
-full_train<-createDataPartition(y=ds_icu_pm_1$icu_dead_before_28,p=.60,list = FALSE)
-ds_train<-ds_icu_pm_1[full_train,]
-ds_test<-ds_icu_pm_1[-full_train,]
+full_train<-createDataPartition(y=ds_icu_pm_2$icu_dead_before_28,p=.60,list = FALSE)
+ds_train<-ds_icu_pm_2[full_train,]
+ds_test<-ds_icu_pm_2[-full_train,]
 ```
 
 
@@ -69,35 +66,74 @@ y<-"icu_dead_before_28"
 
 #small dataset
 
-cltask_1 = makeClassifTask(id = "c1", data = ds_small_sample, target = "icu_dead_before_28",positive="X1")
+cltask_1 = makeClassifTask(id = "c1", data = ds_small_sample, target="icu_dead_before_28",positive="X1")
 
 
 #full dataset
 
 
-cltask_2 = makeClassifTask(id = "c2", data = ds_icu_pm_1, target = "icu_dead_before_28",positive="X1")
+cltask_2 = makeClassifTask(id = "c2", data = ds_icu_pm_2, target = "icu_dead_before_28",positive="X1")
+
+```
+
+```{r}
+listMeasures("classif")
+```
+```{r}
+listMeasures(cltask_2)
+getDefaultMeasure(cltask_2)
+
+
 
 ```
 
 
 #feature selection
+# masure auc
+# ctrl
 ```{r}
 ctrl = makeFeatSelControlSequential(same.resampling.instance = TRUE,
-  impute.val = NULL, method='sffs', alpha = 0.01, beta = -0.001,
-  maxit = NA_integer_, max.features = NA_integer_, tune.threshold = TRUE,
-  tune.threshold.args = list())
+  impute.val = NULL, method='sffs', maxit = 10, max.features = NA_integer_
+  , alpha = 0.02, beta=-0.01,tune.threshold = TRUE,tune.threshold.args = list(measure=list(auc)))
+```
+
+
+#glm parameters
+#default values
+
+```{r}
+getParamSet("classif.h2o.glm")
+```
+
+
+#glm learner
+#default values
+```{r}
+lrn<-makeLearner("classif.h2o.glm",predict.type = "prob")
+```
+
+# 10 cv resampling
+```{r}
+rdesc = makeResampleDesc("CV", iters = 5)
+```
+
+
+```{r}
+ctrl = makeFeatSelControlSequential(same.resampling.instance = TRUE,
+  impute.val = NULL, method='sfbs', maxit = 2, max.features = NA_integer_
+  , alpha = 0.001, beta=-0.001,tune.threshold = TRUE,tune.threshold.args = list(measure=list(auc)))
+```
+
+
+#feature selection
+```{r}
+sfeats = selectFeatures(learner = lrn, task = cltask_1, resampling = rdesc, control = ctrl,
+  show.info = TRUE)
 ```
 
 ```{r}
-ctrl
+analyzeFeatSelResult(sfeats)
 ```
-
-#learner
-```{r}
-lrn<-makeLearner("classif.h2o.glm",predict.type = "prob", par.vals = pars_deeplearning)
-```
-
-https://mlr-org.github.io/mlr-tutorial/release/html/feature_selection/index.html
 
 
 
