--- a/shared/benchmarks/mlr_h2o_benchmark_groups_gbm_glm.Rmd
+++ b/shared/benchmarks/mlr_h2o_benchmark_groups_gbm_glm.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MLR H20 Benchmark"
+title: "MLR H20 Benchmark gbm nnet"
 output:
   html_document: default
   html_notebook: default
@@ -8,8 +8,6 @@ output:
 
 ```{r}
 require(mlr)
-require(h2o)
-require(caret)
 ```
 
 
@@ -19,124 +17,9 @@ set.seed(1000)
 ```
 
 
-#start h2o
+#load results
 ```{r}
-h2o.init(nthreads=-1, max_mem_size = "7G")
-#h2o.removeAll()
-#h2o.shutdown(prompt = FALSE)
-
-```
-
-
-# LOAD DATASET
-```{r}
-load(file = "~/shared/ds_icu_pm_2")
-```
-
-
-
-#variables
-```{r}
-y<-"icu_dead_before_28"
-```
-
-
-#datasets
-```{r}
-
-#---------------------------------------------------------------------
-#more/less than 3 icu stays
-ds_icu_stay_more72<-filter(ds_icu_2m,icu_stay_more72==1)
-ds_icu_stay_less72<-filter(ds_icu_2m,icu_stay_more72==0)
-
-
-
-#more/less than 4 sofa score
-ds_icu_sofa_score_more4<-filter(ds_icu_2m,score_sofa_more4==1)
-ds_icu_sofa_score_less4<-filter(ds_icu_2m,score_sofa_more4==0)
-
-
-#yes/no diabetics
-ds_icu_diabetes_yes<-filter(ds_icu_2m,diag_has_diabet==1)
-ds_icu_diabetes_no<-filter(ds_icu_2m,diag_has_diabet==0)
-
-
-#yes/no insuline IV
-ds_icu_insulineiv_yes<-filter(ds_icu_2m,icu_has_admiv_insulin==1)
-ds_icu_insulineiv_no<-filter(ds_icu_2m,icu_has_admiv_insulin==0)
-
-
-#yes/no sepsis in
-ds_icu_sepsis_yes<-filter(ds_icu_2m,med_has_sepsis==1)
-ds_icu_sepsis_no<-filter(ds_icu_2m,med_has_sepsis==0)
-
-```
-
-
-
-#tasks
-```{r}
-cltask1 = makeClassifTask(id = "isu_stay_more72", data = ds_icu_stay_more72, target = "icu_dead_before_28",positive="X1")
-cltask2 = makeClassifTask(id = "isu_stay_less72", data = ds_icu_stay_less72, target = "icu_dead_before_28",positive="X1")
-cltask3 = makeClassifTask(id = "isu_sofa_score_more4", data = ds_icu_sofa_score_more4, target = "icu_dead_before_28",positive="X1")
-cltask4 = makeClassifTask(id = "isu_sofa_score_less4", data = ds_icu_sofa_score_less4, target = "icu_dead_before_28",positive="X1")
-cltask5 = makeClassifTask(id = "isu_diabetes_yes", data = ds_icu_diabetes_yes, target = "icu_dead_before_28",positive="X1")
-cltask6 = makeClassifTask(id = "isu_diabetes_no", data = ds_icu_diabetes_no, target = "icu_dead_before_28",positive="X1")
-cltask7 = makeClassifTask(id = "isu_insulineiv_yes", data = ds_icu_insulineiv_yes, target = "icu_dead_before_28",positive="X1")
-cltask8 = makeClassifTask(id = "isu_insulineiv_no", data = ds_icu_insulineiv_no, target = "icu_dead_before_28",positive="X1")
-cltask9 = makeClassifTask(id = "isu_sepsis_yes", data = ds_icu_sepsis_yes, target = "icu_dead_before_28",positive="X1")
-cltask10 = makeClassifTask(id = "isu_sepsis_no", data = ds_icu_sepsis_no, target = "icu_dead_before_28",positive="X1")
-cltask11 = makeClassifTask(id = "total", data = ds_icu_pm_2, target = "icu_dead_before_28",positive="X1")
-
-ltasks=list(cltask1,cltask2,cltask3,cltask4,cltask5,cltask6,cltask7,cltask8,cltask9,cltask10,cltask11)
-```
-
-
-
-#parameters
-```{r}
-
-#gbm
-par_gbm<-list()
-par_gbm$balance_classes = TRUE
-par_gbm$ntrees = 1255
-par_gbm$max_depth = 6
-par_gbm$min_rows = 10
-par_gbm$learn_rate = 0.007709469
-par_gbm$balance_classes = TRUE
-
-
-
-#glm
-par_glm<-list()
-par_glm$lambda = 0
-
-```
-
-
-```{r}
-lrns<-list(
-  makeLearner("classif.h2o.gbm",predict.type = "prob",par.vals=par_gbm),
-  makeLearner("classif.h2o.glm",predict.type = "prob",par.vals=par_glm),
-  )
-
-
-rdesc <- makeResampleDesc("CV", iters = 10L)
-meas = list(auc,mmce,timetrain,f1)
-
-```
-
-```{r}
-bmr = benchmark(lrns, ltasks , rdesc, meas, show.info = TRUE)
-```
-
-```{r}
-save(file="~/bmr",bmr)
-```
-
-#results
-```{r}
-bmr
+load (file="~/shared/results/bmr_gbm_glm")
 ```
 
 #boxplot
@@ -145,17 +28,41 @@ plotBMRBoxplots(bmr,measure = auc)
 plotBMRBoxplots(bmr,measure = mmce)
 ```
 
+#numeric results
+```{r}
+
+```
+
+
 #violin plots
 ```{r}
-plotBMRBoxplots(bmr, measure = auc, style = "violin", pretty.names = TRUE, facet.wrap.ncol = 2) +
+plotBMRBoxplots(bmr, measure = auc, style = "violin", pretty.names = TRUE, facet.wrap.ncol = 3) +
   aes(color = learner.id) +
   theme(strip.text.x = element_text(size = 8))
 
 
-plotBMRBoxplots(bmr, measure = mmce, style = "violin", pretty.names = TRUE, facet.wrap.ncol = 2) +
+plotBMRBoxplots(bmr, measure = mmce, style = "violin", pretty.names = TRUE, facet.wrap.ncol = 3) +
   aes(color = learner.id) +
   theme(strip.text.x = element_text(size = 8))
 ```
+
+
+```{r}
+bmr
+```
+
+
+#auc total
+```{r}
+bmr$results
+
+
+df = generateThreshVsPerfData(bmr$results$total, measures = list(fpr,tpr,mmce))
+plotROCCurves(df)
+
+```
+
+
 #rocs
 ```{r}
 df = generateThreshVsPerfData(bmr, measures = list(fpr,tpr,mmce))
@@ -165,7 +72,7 @@ plotROCCurves(df)
 
 
 
-#aummary
+#summary
 ```{r}
 plt=plotBMRSummary(bmr)
 plt+ggtitle("Benchmark aggregate Summary")+
