--- a/shared/benchmarks/mlr_h2o_benchmark_groups_gbm_glm.Rmd
+++ b/shared/benchmarks/mlr_h2o_benchmark_groups_gbm_glm.Rmd
@@ -22,6 +22,12 @@ set.seed(1000)
 load (file="~/shared/results/bmr_gbm_glm")
 ```
 
+```{r}
+bmr
+```
+
+
+
 #boxplot
 ```{r}
 plotBMRBoxplots(bmr,measure = auc)
