--- a/shared/benchmarks/mlr_h2o_benchmark_groups_rf_nnet.Rmd
+++ b/shared/benchmarks/mlr_h2o_benchmark_groups_rf_nnet.Rmd
@@ -19,8 +19,13 @@ set.seed(1000)
 
 #load results
 ```{r}
-load (file="~/shared/results/bmr_bmr_rf_nnet")
+load (file="~/shared/results/bmr_rf_net")
 ```
+
+```{r}
+bmr
+```
+
 
 #boxplot
 ```{r}
