--- a/shared/process/3_glm_analisis.Rmd
+++ b/shared/process/3_glm_analisis.Rmd
@@ -18,7 +18,7 @@ h2o.init(nthreads=-1, max_mem_size = "7G")
 #h2o.shutdown(prompt = FALSE)
 
 # LOAD DATASET
-load("~/shared/datasets/ds_icu_pm_2")
+load("~/shared/datasets/ds_icu_pm_complete_2")
 
 
 #variables
@@ -66,43 +66,27 @@ summary(lmdl)
 
 
 ```{r}
-#Time
-for (m in (names(lmdl[grep("_time",names(lmdl))]))){
-  print(paste(sep=",",m,eval(parse(text=paste0("lmdl$",m)))))
-}
-
-```
-
-```{r}
 
 #AUC
-for (m in (names(lmdl[-grep("_time",names(lmdl))]))){
-  print(paste(sep=",",m,"train",eval(parse(text=paste0("lmdl$",m,"@model$training_metrics@metrics$AUC"))),
-              "validation",eval(parse(text=paste0("lmdl$",m,"@model$validation_metrics@metrics$AUC"))),
-              "cv",eval(parse(text=paste0("lmdl$",m,"@model$cross_validation_metrics@metrics$AUC")))))
-}
+tauc<-paste(format(lmdl@model$training_metrics@metrics$AUC,digits=3),"Train")
+vauc<-paste(format(lmdl@model$validation_metrics@metrics$AUC,digits=3),"Validation")
+cvauc<-paste(format(lmdl@model$cross_validation_metrics@metrics$AUC,digits=3),"Cross Val")
 
-```
-```
-
-
-```{r}
-glm_iter
 ```
 
 #coeficients
 ```{r}
-h2o.coef(glm_iter)
+h2o.coef(lmdl)
 ```
 
 #normalized coeficients
 ```{r}
-h2o.coef_norm(glm_iter)
+h2o.coef_norm(lmdl)
 ```
 
 #coeficients table
 ```{r}
-View(glm_iter@model$coefficients_table)
+View(lmdl@model$coefficients_table)
 ```
 
 
@@ -115,31 +99,29 @@ h2o.std_coef_plot(glm_iter)
 #ROC curve
 #TODO buscar una mejor o ver como formatearla con ggplot
 ```{r}
-fpr = glm_iter@model$training_metrics@metrics$thresholds_and_metric_scores$fpr
-tpr = glm_iter@model$training_metrics@metrics$thresholds_and_metric_scores$tpr
-fpr_val = glm_iter@model$validation_metrics@metrics$thresholds_and_metric_scores$fpr
-tpr_val = glm_iter@model$validation_metrics@metrics$thresholds_and_metric_scores$tpr
+fpr = lmdl@model$training_metrics@metrics$thresholds_and_metric_scores$fpr
+tpr = lmdl@model$training_metrics@metrics$thresholds_and_metric_scores$tpr
+fpr_val = lmdl@model$validation_metrics@metrics$thresholds_and_metric_scores$fpr
+tpr_val = lmdl@model$validation_metrics@metrics$thresholds_and_metric_scores$tpr
+fpr_cv = lmdl@model$cross_validation_metrics@metrics$thresholds_and_metric_scores$fpr
+tpr_cv = lmdl@model$cross_validation_metrics@metrics$thresholds_and_metric_scores$tpr
 plot(fpr,tpr, type='l')
 title('AUC')
-lines(fpr_val,tpr_val,type='l',col='red')
-legend("bottomright",c("Train", "Validation"),col=c("black","red"),lty=c(1,1),lwd=c(3,3))
+lines(fpr_val,tpr_val,type='l',col='green')
+lines(fpr_cv,tpr_cv,type='l',col='red')
+legend("bottomright",c(tauc,vauc,cvauc),col=c("black","green","red"),lty=c(1,1),lwd=c(3,3))
 
 ```
 
 
   
 ```{r}
-h2o.auc(glm_iter,valid=FALSE) # on train
-h2o.auc(glm_iter,valid=TRUE) # on test
+h2o.auc(lmdl,valid=FALSE) # on train
+h2o.auc(lmdl,valid=TRUE) # on test
 ```
 #confusion matrix
 ```{r}
-glm_iter@model$training_metrics@metrics$max_criteria_and_metric_scores
-
-```
-
-#violins plots
-```{r}
+lmdl@model$training_metrics@metrics$max_criteria_and_metric_scores
 
 ```
 
