--- a/shared/benchmarks/mlr_h2o_benchmark_groups_gbm_glm.Rmd
+++ b/shared/benchmarks/mlr_h2o_benchmark_groups_gbm_glm.Rmd
@@ -8,6 +8,7 @@ output:
 
 ```{r}
 require(mlr)
+require(ggplot2)
 ```
 
 
@@ -34,11 +35,6 @@ plotBMRBoxplots(bmr,measure = auc)
 plotBMRBoxplots(bmr,measure = mmce)
 ```
 
-#numeric results
-```{r}
-
-```
-
 
 #violin plots
 ```{r}
@@ -53,18 +49,12 @@ plotBMRBoxplots(bmr, measure = mmce, style = "violin", pretty.names = TRUE, face
 ```
 
 
-```{r}
-bmr
-```
 
 
 #auc total
 ```{r}
 bmr$results
 
-
-df = generateThreshVsPerfData(bmr$results$total, measures = list(fpr,tpr,mmce))
-plotROCCurves(df)
 
 ```
 
