--- a/shared/feature selection/step_glm_feature_selection.Rmd
+++ b/shared/feature selection/step_glm_feature_selection.Rmd
@@ -89,8 +89,41 @@ summary(g4)
 ```
 
 
+#modelo seleccionado 2
 ```{r}
-p<-predict(g4,newdata=d_test,type="response")
+g5<- glm(formula = icu_dead_before_28 ~ adt_hos_age + adt_readmit + 
+    icu_type_fservice + icu_has_presc_insulin + icu_has_admiv_insulin + 
+    icu_stay_more72 + icd9d_m_chapter + com_cardiac_arrhythmias + 
+    com_hypertension + com_paralysis + com_other_neur_disorders + 
+    com_diabetes_uncomplicated + com_diabetes_complicated + com_liver_disease + 
+    com_lymphoma + com_metastatic_cancer + com_solid_tum_wo_metastasis + 
+    com_obesity + com_fluid_elec_disorders + com_deficiency_anemias + 
+    com_drug_abuse + com_psychoses + com_depression + score_sofa + 
+    med_has_allergie_insulin + med_has_infection + med_has_explicit_sepsis + 
+    med_has_organ_dysfunction + med_has_sepsis + med_has_vaso + 
+    med_has_24h_vaso + med_has_dialysis + med_has_24h_dialysis + 
+    med_has_mechvent + med_has_24h_mechvent + ph_avg_24h + po2_avg_24h + 
+    lactate_avg_24h + pco2_avg_24h + po2_avg_48h + whiteblood_avg_48h + 
+    lactate_avg_48h + ph_avg_72h + lactate_avg_72h + hemoglobin_avg_72h + 
+    bicarbonate_avg_72h + creatinine_avg_72h + time_range_protocol_sum_24h + 
+    time_hyper_gluce_sum_48h + time_range_protocol_sum_48h + 
+    time_range_clinic_sum_48h + glucose_variability_48h + time_hyper_gluce_sum_72h + 
+    time_range_protocol_sum_72h + time_range_clinic_sum_72h + 
+    hyper_gluce_percent_24h + in_range_clinic_percent_24h + in_range_protocol_percent_24h + 
+    hyper_gluce_percent_48h + in_range_clinic_percent_48h + hipo_moderate_percent_72h + 
+    hyper_gluce_percent_72h + in_range_clinic_percent_72h + in_range_protocol_percent_72h + 
+    nut_tpn_in_24h + nut_npo_in_24h + nut_tfe_in_24h + nut_npo_in_48h + 
+    nut_npo_in_72h + nut_tfe_in_72h + diag_has_diabet, family = binomial(), 
+    data = d_train)
+
+
+summary(g5)
+```
+
+
+
+```{r}
+p<-predict(g5,newdata=d_test,type="response")
 
 
 f1<-roc(d_test$icu_dead_before_28,p)
@@ -98,7 +131,7 @@ plot(f1)
 
 f1
 
-g4
+g5
 
 
 ```
